Class Work completed

--- a/playwright/.env
+++ b/playwright/.env
@@ -1,1 +1,4 @@
 BASE_URL="https://playwright.dev/"
+BASE_HTML_FORM_URL="https://testpages.herokuapp.com/styled/basic-html-form-test.html"
+PASSWORD=AdminUser123!@Test
+USERNAME=PESHO12
